# trs-llm-calibration

./: .gitignore  LICENSE  README.md  pyproject.toml
prompts/calibration/: sys_prompt.txt  usr_prompt.txt
prompts/phase-1-llm-eval/: sys_prompt.txt  usr_prompt.txt
prompts/rec-llm/: sys_prompt.txt  usr_prompt.txt
src/: constants.py  data_directories.py
src/common/: generation_utils.py
src/direct_reasoner/: config.py  evaluator.py  generate.py  token_counter.py  utils.py
src/human-eval/: get_data.py
src/llm_setup/: __init__.py  base_model.py  claude_model.py  deepseek_model.py  gemini_model.py  gpt_model.py  model_factory.py  qwen_model.py
src/query_selection/: Diversity_Queries.ipynb
src/rec_llm/: config.py  filter_common_queries.py  generate.py  response_handler.py  utils.py
tests/analysis/: Aggregated vs best list.ipynb  Alignment Analysis - Human.ipynb  Alignment Analysis Listwise LLMs calibrated.ipynb  Alignment Analysis Listwise LLMs.ipynb  Alignment Analysis.ipynb  Calibration Significance Tests.ipynb  Dimension wise vs. best list selection.ipynb  Human Eval Cleanup.ipynb  Human Eval.ipynb  Human eval IRR.ipynb  Justification correlation.ipynb  Sig Tests.ipynb
tests/analysis/notebooks/: city_coords.json  geo-diversity.ipynb  human-maj-vote.ipynb  llm-human-agreement.ipynb  parse_survey.ipynb
tests/analysis/src/: best_list_eval.py  best_list_ratio.py  calibration_sig_tests.py  extract_judge_scores.py  human_eval.py  irr_eval.py  parse_survey.py  quantitative.py  utils.py
