[project]
name = "trs-llm-calibration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "accelerator>=2025.11.11",
    "anthropic>=0.86.0",
    "bertopic>=0.17.4",
    "bitsandbytes>=0.49.2",
    "certifi==2024.7.4",
    "datasets>=4.8.4",
    "google-cloud>=0.34.0",
    "google-cloud-aiplatform>=1.64.0",
    "google-genai>=1.16.1",
    "google-generativeai>=0.8.6",
    "gradio>=6.10.0",
    "gradio-client>=2.4.0",
    "huggingface-hub>=0.36.2",
    "jinja2>=3.1.6",
    "lancedb>=0.30.1",
    "langdetect>=1.0.9",
    "llama-index>=0.14.19",
    "llama-index-embeddings-huggingface>=0.7.0",
    "llama-index-graph-stores-neo4j>=0.7.0",
    "llama-index-llms-huggingface>=0.7.0",
    "llama-index-llms-huggingface-api>=0.7.0",
    "mistralai[gcp]>=2.1.3",
    "nltk>=3.9.4",
    "num2words>=0.5.14",
    "openai>=2.30.0",
    "python-dotenv>=1.2.2",
    "pyvis>=0.3.2",
    "sentence-transformers>=5.3.0",
    "transformers>=4.57.6",
    "vertexai==1.64.0",
]
